# zerolink-backend

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  main_test.go
.github/workflows/: broker-release.yml  build.yml
broker/: .gitignore  Cargo.toml  DEPLOY.md  README.md
broker/.sqlx/: query-01dc59e0ea006c177836b6c8f67d417795d0362cdd33a2be131f023c29da4ab0.json  query-0579e855e7993b0e7c8ac27edd58bc8fc1a6b38b4cf3d173f7e6e8bb8c45becb.json  query-063a224736a58cc0a4427ab997160a7a0cbe68c4cc8649a1d8b675e76305c93b.json  query-0ae8d2c1bca5beaa82f101fd165d353acede0a509af64e216ed2da5b75d12dc1.json  query-0ea3a2db80e8d2e6f8a4c9c149ad0a2f69f99efb10fd92be4c7eea270c0aa329.json  query-188fa2aaa33f8a91739d0c5f69e0cb8b5a5fa6b627cae733f8b73c34e24da0b7.json  query-2608624a75233787fbafb5c4f6089a8faccd6fadbaeb6d84bda750118f948391.json  query-2e291c85965a46556945b3078e70e27449805a19929a5967f97eab7250787168.json  query-336ed4dbd04f615245382e20d6bb7d62f8d9458bb333b38dcbc6bbde13b33a59.json  query-3a54b1866a611d8d5f4afcd5591f9b816669f1b53aec7f9d0a51421511f7e791.json  query-3ba838fe9363a57a59dc0dbe6e546049d55e9fd3b73e18b00cbca38ef4bc2d9c.json  query-3e0e3223e14704cf431a652ca93bc80d512b9c52185d1a8b88e2f66c06caae14.json  query-46f9e23904c2047443a8c3783ffffa87c9ab9ae99b2c7d8722216406ee491979.json  query-493426e094e2f7f7e4dd15fdb61d7d76143c5ba156812ed7f088e0a617b68dc7.json  query-4c2844e6d3c6df851c4ebed842425a4c8f765de23a6c818cb85481e441412063.json  query-612dbf94730b64e1e909e4e55dd4fcca14056993494b9fcaf40945d282d2aab8.json  query-62a317f39da7b7334c8dcaa7a95894849736c21943186a3f5e98c29c2deb0f1a.json  query-645811c545a1239b165287adac0f6ce9daebf7d9a4342b600bd80ad14e5f3ab2.json  query-6d069cec5beb1b84a7bbca90b71d1712180e8fef8459f09a4858d58798b3727f.json  query-73ff7da86010324d7133aae29e05313310aecc55a3d507d4c9494c1835631abb.json  query-7cc8037d5a89966a5978b9c6a6bcf8465234d67068919a8dc96d7fbabdab4fcd.json  query-800145d8d2a2692420bcd05bea9667452c613f92057ded389caa710489c4bcb6.json  query-8ebfe6d164e0717074eaf904f47d61faf515a2998bb03b1cade97c57da43e7d8.json  query-a934a8dca415b4620b4195c771287a4748a6f4f480f7785ba345b0d591f631c7.json  query-b986b34d2b360d6b96a9192d772bba94fa7097126fc7c227e2cd8740aecdc5a4.json  query-bf093e407451d279fe588946a9fd23f36c663a45af6cf8399b0cba00059dade2.json  query-bff0320e2c450a0ca926383a49a3a2818922c1c208215923fe9d042cc9bc58ab.json  query-c56b8104bfbb57f94b175ee0b0c5cbb2a7c98ace5f37fd28309f22ab7ae608da.json  query-cd673922a65ee109c7fa08496adf9cb50a603fd7597e926a24f891c8575b5de1.json  query-df867c2f560b19b8a4454ac622bcb60ab3124369cb855244a674f8ae0ca1a27c.json  query-e2fa96dd6529d33bcf5110b9a36c9b174c64c24105edc72a7d27261900a4010c.json  query-feb42f2aad4c3a99d97ceaa1f1aa63316ac7d1ccc7a1b06177a159fb6f13c932.json
broker/examples/: quic_smoke.rs
broker/migrations/: 0001_initial.sql  0002_add_room_type.down.sql  0002_add_room_type.up.sql  0003_members_left_at.down.sql  0003_members_left_at.up.sql
broker/src/: broker_status.rs  config.rs  http.rs  main.rs  usage_reporter.rs  verify_client.rs
broker/src/datapath/: cert.rs  limiter.rs  mod.rs  obfs.rs  path_map.rs  server.rs
broker/src/storage/: members.rs  mod.rs  rooms.rs  traffic.rs
broker/src/ws/: broadcast.rs  handlers.rs  mod.rs  protocol.rs  session.rs
cmd/admin-create/: main.go
cmd/gen-service-token/: main.go
cmd/import-nodes/: main.go
dev/: zerolink.db
internal/auth/: jwt.go  jwt_test.go  middleware.go  password.go
internal/clash/: yaml.go  yaml_test.go
internal/config/: config.go
internal/cron/: quota_reset.go
internal/server/: admin_handler.go  admin_handlers.go  admin_ui.go  auth_handler.go  auth_handlers.go  helpers.go  nodes_handler.go  routes.go  server.go  server_test.go  service_token_middleware.go  templates.go  usage_handlers.go  usage_report_handler.go  verify_handler.go
internal/storage/: db.go  errors.go  invites.go  nodes.go  service_tokens.go  subscriptions.go  tokens.go  traffic.go  traffic_revoked.go  users.go
internal/storage/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_quota_and_disable.down.sql  0002_quota_and_disable.up.sql  0003_outbound_config_and_443.down.sql  0003_outbound_config_and_443.up.sql  0004_broker_and_service_tokens.down.sql  0004_broker_and_service_tokens.up.sql  0005_broker_enabled.down.sql  0005_broker_enabled.up.sql  0006_invites_fk_set_null.down.sql  0006_invites_fk_set_null.up.sql  0007_user_room_rate_limit.down.sql  0007_user_room_rate_limit.up.sql
web/static/: style.css
web/templates/: dashboard.html  invites.html  login.html  nodes.html  users.html
