[package]
name = "zerolink-broker"
version = "0.3.0-rc1"
edition = "2021"
publish = false
description = "0-0link broker daemon: room signaling + L3 datapath relay"
license = "Proprietary"
rust-version = "1.75"

[[bin]]
name = "zerolink-broker"
path = "src/main.rs"

[dependencies]
# --- async runtime ---------------------------------------------------------
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "signal", "sync", "time", "net", "io-util", "fs",
] }

# --- HTTP server (signaling) ----------------------------------------------
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Stream/Sink combinators for the WS connection loop. axum re-exports
# WebSocket but the .next() / .send() helpers come from futures-util's
# Stream/Sink traits.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# --- HTTP client (reverse-verify against backend) -------------------------
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }

# --- serde / json ----------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- logging / tracing -----------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- crypto utilities ------------------------------------------------------
sha2 = "0.10"
hex = "0.4"

# --- error handling --------------------------------------------------------
anyhow = "1"
thiserror = "1"

# --- random (room codes, session ids) -------------------------------------
rand = "0.8"

# --- self-signed cert for QUIC datapath (rotates per broker boot) -----
rcgen = "0.13"

# --- byte buffers for QUIC datagram framing ---------------------------
bytes = "1"

# --- time + KST month boundary calculation --------------------------------
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"

# --- QUIC datapath (used in 2d) -------------------------------------------
quinn = "0.11"

# --- SQLite (sqlx + offline mode) -----------------------------------------
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls", "sqlite", "macros", "migrate",
] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
# dead_code is allowed crate-wide because:
#   - Several storage/* fields and methods are intentional stubs that
#     get consumed in later sub-commits (2c-3 GC task, 2d datapath,
#     G7 traffic reporter, Phase 4.1 P2P endpoint fields).
#   - The crate-level allow inside main.rs only covers the binary
#     root module; sub-modules need their own allow. The Cargo
#     [lints] table applies to the whole crate uniformly.
# When 4.x lands, revisit and remove unused fields whose intended
# consumer never materialized.
dead_code = "allow"
